# Bitdefender-lab-Rust

./: .gitignore  Cargo.toml  Rocket.toml
src/: lib.rs  main.rs
static/: index.html
