[package]
name = "zip-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.115"
tqdm = "0.7.0"
zip = "0.6.6"

[profile.release]
debug = true